tests/More/Bad/24.tig
/* error : formals are fewer than actuals */
let
	function g (a:int , b:string):int = a
in
	g(3,"one",5)
end


